Implement services seaction

--- a/index.html
+++ b/index.html
@@ -110,6 +110,61 @@
         </div>
     </section>
 
+
+
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <div class="container">
+            <div class="section-header">
+                <h2>Our <span>Services</span></h2>
+                <p>Tailored solutions to meet your business needs</p>
+            </div>
+
+            <div class="services-grid">
+                <!-- Service 1 -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-laptop-code"></i>
+                    </div>
+                    <h3>Web Design & Development</h3>
+                    <p>Custom websites designed to engage your audience and drive conversions with responsive layouts and modern technologies.</p>
+                    <a href="#contact" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                </div>
+
+                <!-- Service 2 -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-headset"></i>
+                    </div>
+                    <h3>Support & Maintenance</h3>
+                    <p>Ongoing technical support and regular updates to keep your digital assets secure, optimized, and performing at their best.</p>
+                    <a href="#contact" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                </div>
+
+                <!-- Service 3 -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-server"></i>
+                    </div>
+                    <h3>Web Hosting & Management</h3>
+                    <p>Reliable hosting solutions with regular backups, security monitoring, and performance optimization for your web applications.</p>
+                    <a href="#contact" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                </div>
+
+                <!-- Service 4 -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-cogs"></i>
+                    </div>
+                    <h3>Custom Software Development</h3>
+                    <p>Bespoke software solutions tailored to your unique business requirements, from enterprise applications to specialized tools.</p>
+                    <a href="#contact" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+
     <!-- Why Us Section -->
     <section id="why-us" class="why-us">
         <div class="container">
@@ -192,7 +247,7 @@
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
-        <div class="container" style="border: 2px solid green; text-align: center;">
+        <div class="container">
             <div class="section-header">
                 <h2>Get In <span>Touch</span></h2>
                 <p>Ready to bring your ideas to life? Let's start a conversation</p>
